--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -66,7 +66,7 @@
             android:id="@+id/id_btn_bad_gateway"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="模拟502" />
+            android:text="自定义接口地址" />
     </LinearLayout>
 
     <!--测试AutoConstraintLayout Start-->
