--- a/sxw_common_lib/src/main/res/values/colors.xml
+++ b/sxw_common_lib/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff3333</color>
-    <color name="colorAccentPress">#80ff3333</color>
+    <color name="colorPrimary">@color/mGreen</color>
+    <color name="colorPrimaryDark">@color/mGreenDark</color>
+    <color name="colorAccent">@color/mBlue</color>
+    <color name="colorAccentPress">@color/mBlueDark</color>
 </resources>
