--- a/sxw_common_lib/src/main/res/values/colors_custom.xml
+++ b/sxw_common_lib/src/main/res/values/colors_custom.xml
@@ -2,23 +2,40 @@
 <resources>
     <!--ripple color-->
     <color name="customRippleColor">@color/black_20p</color>
+    <color name="color_btn_ripple">#1E000000</color>
+    <color name="mThemeBgColor">#F2F2F2</color>
 
     <!--custom colors-->
     <color name="mRed">#FD6F6E</color>
+    <color name="red_normal">#D73837</color>
+    <color name="red_pressed">#FF6666</color>
+    <color name="text_color">#454545</color>
+    <color name="divider_color">#DDDDDD</color>
+    <color name="msg_color">#767676</color>
+
+    <color name="themeBgColor">#E5F0F5</color>
+    <color name="themeVIColor">@color/mBlue</color>
+    <color name="themeVIColorDark">#3F506D</color>
+
     <color name="mGreen">#53b679</color>
     <color name="mGreenDark">#288c56</color>
     <color name="mGreenLight">#78d787</color>
     <color name="mGreenLight2">#6cc67f</color>
     <color name="mGreenRight">#dcf2e3</color>
     <color name="mRedWrong">#edd9cb</color>
-    <color name="mBlue">#04BFFB</color>
+    <color name="mBlue">#3496f0</color>
+    <color name="mBlueLight">#4BB2E8</color>
+    <color name="mBlueLight2">#CCE5FA</color>
+    <color name="mBlueDark">#087da3</color>
     <color name="mYellow">#FECB55</color>
     <color name="mPink">#FE9E9D</color>
     <color name="mWhite">#FFFFFF</color>
-    <color name="mBlack">#666666</color>
+    <color name="mBlack">#333333</color>
     <color name="mGray">#999999</color>
 
     <!--不同的Gray-->
+    <color name="mWhite_Title">#F0F0F0</color>
+    <color name="mGrayDark">#666666</color>
     <color name="mGray43">#434343</color>
     <color name="mGray50">#505050</color>
     <color name="mGray54">#545454</color>
@@ -38,7 +55,6 @@
     <color name="mGrayDB">#DBDBDB</color>
     <color name="mGrayDD">#DDDDDD</color>
     <color name="mGrayDF">#DFDFDF</color>
-    <color name="mGrayE0">#E0E0E0</color>
     <color name="mGrayE4">#E4E4E4</color>
     <color name="mGrayE8">#E8E8E8</color>
     <color name="mGrayED">#EDEDED</color>
@@ -46,11 +62,11 @@
     <color name="mGrayF1">#F1F1F1</color>
     <color name="mGrayF2">#F2F2F2</color>
     <color name="mGrayF5">#F5F5F5</color>
+    <color name="mGrayF7">#F7F7F7</color>
     <color name="mGrayF9">#F9F9F9</color>
 
     <!-- 不同透明度的黑色 -->
     <color name="black">#FF000000</color>
-    <color name="black_93p">#ED000000</color>
     <color name="black_90p">#E6000000</color>
     <color name="black_80p">#CC000000</color>
     <color name="black_70p">#B3000000</color>
@@ -70,7 +86,7 @@
     <color name="white_80p">#CCFFFFFF</color>
     <color name="white_70p">#B3FFFFFF</color>
     <color name="white_60p">#99FFFFFF</color>
-    <color name="white_50p">#8FFFFFF0</color>
+    <color name="white_50p">#80FFFFFF</color>
     <color name="white_40p">#66FFFFFF</color>
     <color name="white_30p">#4DFFFFFF</color>
     <color name="white_20p">#33FFFFFF</color>
