--- a/app/src/main/res/layout/activity_empty.xml
+++ b/app/src/main/res/layout/activity_empty.xml
@@ -38,53 +38,82 @@
             android:padding="10px"
             android:text="这里显示具体的Response信息" />
 
-        <Button
-            android:id="@+id/id_btn_get_bean"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="加载单个Bean" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <Button
-            android:id="@+id/id_btn_get_boolean"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="加载Boolean" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="10px">
 
-        <Button
-            android:id="@+id/id_btn_get_string"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="加载String" />
+                <Button
+                    android:id="@+id/id_btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="模拟登陆" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/id_btn_get_integer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="加载Integer" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="10px">
 
-        <Button
-            android:id="@+id/id_btn_failed"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="模拟失败" />
+                <Button
+                    android:id="@+id/id_btn_get_bean"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="加载单个Bean" />
 
-        <Button
-            android:id="@+id/id_btn_error_json"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="模拟JSON错误" />
+                <Button
+                    android:id="@+id/id_btn_get_boolean"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="加载Boolean" />
 
-        <Button
-            android:id="@+id/id_btn_not_found"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="模拟404" />
+                <Button
+                    android:id="@+id/id_btn_get_string"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="加载String" />
 
-        <Button
-            android:id="@+id/id_btn_bad_gateway"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="自定义接口地址" />
+                <Button
+                    android:id="@+id/id_btn_get_integer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="加载Integer" />
+
+                <Button
+                    android:id="@+id/id_btn_failed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="模拟失败" />
+
+                <Button
+                    android:id="@+id/id_btn_error_json"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="模拟JSON错误" />
+
+                <Button
+                    android:id="@+id/id_btn_not_found"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="模拟404" />
+
+                <Button
+                    android:id="@+id/id_btn_bad_gateway"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="自定义接口地址" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <!--测试AutoConstraintLayout Start-->
