功能点描述：适配Dialog

--- a/sxw_common_lib/src/main/res/layout/dialog_custom_common_button.xml
+++ b/sxw_common_lib/src/main/res/layout/dialog_custom_common_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -10,7 +10,7 @@
         android:background="@color/mGrayED" />
 
     <!--按钮-->
-    <LinearLayout
+    <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="80px">
 
@@ -45,5 +45,5 @@
             android:text="@string/txt_ok"
             android:textColor="@color/mGreen"
             android:textSize="28px" />
-    </LinearLayout>
-</LinearLayout>
+    </com.zhy.autolayout.AutoLinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
