--- a/sxw_common_lib/src/main/res/layout/dialog_custom_common_button_single.xml
+++ b/sxw_common_lib/src/main/res/layout/dialog_custom_common_button_single.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -20,4 +20,4 @@
         android:text="@string/txt_i_know"
         android:textColor="@color/mBlue"
         android:textSize="28px" />
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
