--- a/sxw_common_lib/src/main/res/layout/dialog_custom_common_title.xml
+++ b/sxw_common_lib/src/main/res/layout/dialog_custom_common_title.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,7 +19,7 @@
             android:text="@string/txt_dialog_dft_title"
             android:textSize="30px" />
 
-        <FrameLayout
+        <com.zhy.autolayout.AutoFrameLayout
             android:id="@+id/id_iv_dialog_close"
             android:layout_width="72px"
             android:layout_height="72px"
@@ -38,11 +38,11 @@
                 android:padding="10px"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_close_gray" />
-        </FrameLayout>
-    </RelativeLayout>
+        </com.zhy.autolayout.AutoFrameLayout>
+    </com.zhy.autolayout.AutoRelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/mGreen" />
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
