--- a/sxw_common_lib/src/main/res/layout/dialog_custom_message.xml
+++ b/sxw_common_lib/src/main/res/layout/dialog_custom_message.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="660px"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_white_5dp"
@@ -29,5 +29,5 @@
         <!--底部按钮-->
         <include layout="@layout/dialog_custom_common_button_single" />
 
-    </LinearLayout>
-</LinearLayout>
+    </com.zhy.autolayout.AutoLinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
