--- a/sxw_common_lib/src/main/res/layout/error_view.xml
+++ b/sxw_common_lib/src/main/res/layout/error_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -16,4 +16,4 @@
         android:layout_marginTop="5dp"
         android:text="数据加载失败，点击刷新！"
         android:textColor="@color/txt_color" />
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
